--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,141 @@
-name: Deploy to AWS ECS
+name: CI/CD Pipeline - GenCommerce
 
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
-
-env:
-  AWS_REGION: us-east-1  # Change to your AWS region
-  ECR_REPO_BACKEND: gen-com-services
-  ECR_REPO_FRONTEND: gen-com-ui
-  ECS_CLUSTER: gen-com-cluster
-  ECS_SERVICE_BACKEND: gen-com-services
-  ECS_SERVICE_FRONTEND: gen-com-ui
-  ECS_TASK_DEFINITION_BACKEND: gen-com-services-task-def.json
-  ECS_TASK_DEFINITION_FRONTEND: gen-com-ui-task-def.json
+      - main
 
 jobs:
-  deploy:
-    name: Deploy to AWS ECS
+  test-lint-build-gen-com-services:
+    name: Test & Lint gen-com-services (gen-com-services)
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
 
-    - name: Login to AWS ECR
-      run: |
-        aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+      - name: Install dependencies
+        run: |
+          cd gen-com-services
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Build and Push Backend Docker Image
-      run: |
-        docker build -t $ECR_REPO_BACKEND ./gen-com-services
-        docker tag $ECR_REPO_BACKEND:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_BACKEND:latest
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_BACKEND:latest
+      - name: Lint with Flake8
+        run: |
+          cd gen-com-services
+          pip install flake8
+          flake8 . --exclude=venv,__pycache__ --max-line-length=88
 
-    - name: Build and Push Frontend Docker Image
-      run: |
-        docker build -t $ECR_REPO_FRONTEND ./gen-com-ui
-        docker tag $ECR_REPO_FRONTEND:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_FRONTEND:latest
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_FRONTEND:latest
+      - name: Run Tests
+        run: |
+          cd gen-com-services
+          pip install pytest
+          pytest
 
-    - name: Deploy Backend Service to ECS
-      run: |
-        aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE_BACKEND --force-new-deployment
+  test-lint-build-gen-com-ui:
+    name: Test & Lint gen-com-ui 
+    runs-on: ubuntu-latest
 
-    - name: Deploy Frontend Service to ECS
-      run: |
-        aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE_FRONTEND --force-new-deployment
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Install dependencies
+        run: |
+          cd gen-com-ui
+          npm install
+
+      - name: Lint with ESLint
+        run: |
+          cd gen-com-ui
+          npm run lint
+
+      - name: Run Tests
+        run: |
+          cd gen-com-ui
+          npm run test
+
+      - name: Build Project
+        run: |
+          cd gen-com-ui
+          npm run build
+
+  # deploy-gen-com-services:
+  #   name: Deploy gen-com-services (gen-com-services)
+  #   runs-on: ubuntu-latest
+  #   needs: test-lint-build-gen-com-services
+
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.9"
+
+  #     - name: Install dependencies
+  #       run: |
+  #         cd gen-com-services
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
+
+  #     - name: Package FastAPI app
+  #       run: |
+  #         cd gen-com-services
+  #         zip -r deploy.zip . -x "*.git*"
+
+  #     - name: Deploy to AWS Lambda
+  #       uses: aws-actions/aws-lambda-deploy@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ secrets.AWS_REGION }}
+  #         function-name: "gen-com-services"
+  #         zip-file: "gen-com-services/deploy.zip"
+
+  # deploy-gen-com-ui:
+  #   name: Deploy gen-com-ui (gen-com-ui)
+  #   runs-on: ubuntu-latest
+  #   needs: [test-lint-build-gen-com-ui, deploy-gen-com-services]
+
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+
+  #     - name: Install Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "18"
+
+  #     - name: Install dependencies
+  #       run: |
+  #         cd gen-com-ui
+  #         npm install
+
+  #     - name: Build Next.js app
+  #       run: |
+  #         cd gen-com-ui
+  #         npm run build && npm run export
+
+  #     - name: Deploy to S3
+  #       run: |
+  #         aws s3 sync gen-com-ui/out s3://your-bucket-name --delete
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         AWS_REGION: ${{ secrets.AWS_REGION }}
+
+  #     - name: Invalidate CloudFront cache
+  #       run: |
+  #         aws cloudfront create-invalidation --distribution-i
