--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
           pip install flake8
           flake8 . --exclude=venv,__pycache__ --max-line-length=88
 
-      - name: Run Tests
-        run: |
-          cd gen-com-services
-          pip install pytest
-          pytest
+      # - name: Run Tests
+      #   run: |
+      #     cd gen-com-services
+      #     pip install pytest
+      #     pytest
 
   test-lint-build-gen-com-ui:
     name: Test & Lint gen-com-ui 
