--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd gen-com-ui
-          npm install
+          npm install --legacy-peer-deps
 
       - name: Lint with ESLint
         run: |
