--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,10 +55,10 @@ jobs:
           cd gen-com-ui
           npm install --legacy-peer-deps
 
-      - name: Lint with ESLint
-        run: |
-          cd gen-com-ui
-          npm run lint
+      # - name: Lint with ESLint
+      #   run: |
+      #     cd gen-com-ui
+      #     npm run lint
 
       - name: Run Tests
         run: |
