--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx run-many --target=serve --projects=gen-com-ui,gen-com-services --parallel",
-    "build": "nx run-many --target=build --projects=gen-com-ui,gen-com-services --parallel"
+    "build": "nx run-many --target=build --projects=gen-com-ui,gen-com-services --parallel",
+    "lint": "nx lint gen-com-ui --fix"
   },
   "private": true,
   "devDependencies": {
