--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nx run-many --target=serve --projects=gen-com-ui,gen-com-services --parallel",
     "build": "nx run-many --target=build --projects=gen-com-ui,gen-com-services --parallel",
-    "lint": "nx lint gen-com-ui --fix"
+    "lint": "nx lint gen-com-ui --fix",
+    "test": "nx test gen-com-ui"
   },
   "private": true,
   "devDependencies": {
