--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@eslint/compat": "^1.1.1",
+    "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "20.4.5",
@@ -40,8 +40,8 @@
     "@types/react-dom": "19.0.0",
     "babel-jest": "^29.7.0",
     "core-js": "^3.36.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.16",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next": "^15.1.7",
     "nx": "20.4.5",
     "prettier": "^2.6.2",
     "rollup": "^4.14.0",
@@ -62,7 +63,6 @@
     "verdaccio": "^5.0.4"
   },
   "dependencies": {
-    "next": "~15.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
