--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nx run-many --target=serve --projects=gen-com-ui,gen-com-services --parallel",
     "build": "nx run-many --target=build --projects=gen-com-ui,gen-com-services --parallel",
     "lint": "nx lint gen-com-ui --fix --skip-nx-cache",
-    "test": "nx test gen-com-ui"
+    "test": "nx test gen-com-ui --skip-nx-cache"
   },
   "private": true,
   "devDependencies": {
