--- a/gen-com-ui/Dockerfile
+++ b/gen-com-ui/Dockerfile
@@ -1,23 +1,20 @@
-# Use Node.js base image
-FROM node:18
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY package.json package-lock.json ./
-
-# Install dependencies
+# Copy package files and install dependencies
+COPY ../package.json ../package-lock.json ./
 RUN npm install
 
-# Copy project files
+# Copy app files
 COPY . .
 
-# Build Next.js app
+# Build the Next.js app
 RUN npm run build
 
-# Expose port
+# Expose frontend port
 EXPOSE 3000
 
 # Start the app
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
