--- a/apps/gen-com-ui/project.json
+++ b/apps/gen-com-ui/project.json
@@ -5,5 +5,12 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project gen-com-ui --web",
-  "targets": {}
+  "targets": {
+    "serve": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nx dev gen-com-ui"
+      }
+    }
+  }
 }
